--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>About Wes Anderson</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -18,8 +18,129 @@
     />
   </head>
   <body>
-    <div id="header"></div>
-    <p>deneme</p>
+    <div id="header" class="sticky-top"></div>
+    <div class="row justify-content-center">
+      <div
+        class="container p-5 my-5 border"
+        style="width: 1080px; height: max-content"
+      >
+        <div class="row">
+          <img
+            style="width: 1000px; height: 300px"
+            src="/images/wes.jpg"
+            alt="Wes"
+          />
+        </div>
+        <br />
+        <div class="row">
+          <h3>Who is Wes Anderson?</h3>
+        </div>
+        <hr />
+        <div class="row">
+          <p>
+            Wesley Wales Anderson (born May 1, 1969) is an American filmmaker.
+            His films are known for their eccentricity and unique visual and
+            narrative styles. Cited by some critics as a modern-day example of
+            the work of an auteur, three of Anderson's films – The Royal
+            Tenenbaums (2001), Moonrise Kingdom (2012), and The Grand Budapest
+            Hotel (2014) – appeared in BBC Culture's 2016 poll of the greatest
+            films since 2000. Anderson was nominated for the Academy Award for
+            Best Original Screenplay for The Royal Tenenbaums (2001), Moonrise
+            Kingdom (2012) and The Grand Budapest Hotel (2014), as well as the
+            Academy Award for Best Animated Feature for the stop-motion films
+            Fantastic Mr. Fox (2009) and Isle of Dogs (2018). With The Grand
+            Budapest Hotel, he received his first Academy Award nominations for
+            Best Director and Best Picture, and won the Golden Globe Award for
+            Best Motion Picture – Musical or Comedy and the BAFTA Award for Best
+            Original Screenplay. He currently runs the production company
+            American Empirical Pictures, which he founded in 1998. He won the
+            Silver Bear for Best Director for Isle of Dogs in 2018.
+          </p>
+        </div>
+        <div class="row">
+          <h3>Directing techniques</h3>
+          <hr />
+          <p>
+            Anderson's cinematic influences include Pedro Almodóvar, Satyajit
+            Ray, Hal Ashby, and Roman Polanski. Anderson has a unique
+            directorial style that has led several critics to consider him an
+            auteur.Wes Anderson is considered a central figure in the American
+            Eccentric Cinema tradition.
+          </p>
+          <h4>Themes and stories</h4>
+          <hr />
+          <p>
+            Anderson has chosen to direct mostly fast-paced comedies marked by
+            more serious or melancholic elements, with themes often centered on
+            grief, loss of innocence, dysfunctional families, parental
+            abandonment, adultery, sibling rivalry and unlikely friendships. His
+            movies have been noted for being unusually character-driven, and by
+            turns both derided and praised with terms like "literary geek chic".
+            The plots of his movies often feature thefts and unexpected
+            disappearances, with a tendency to borrow liberally from the caper
+            genre.
+          </p>
+          <h4>Visual style</h4>
+          <hr />
+          <p>
+            Anderson has been noted for extensive use of flat space camera
+            moves, symmetrical compositions, knolling, snap-zooms, slow-motion
+            walking shots, a deliberately limited color palette, and hand-made
+            art direction often utilizing miniatures. These stylistic choices
+            give his movies a highly distinctive quality that has provoked much
+            discussion, critical study, supercuts, mash-ups, and even parody.
+            Many writers, critics, and even Anderson himself, have commented
+            that this gives his movies the feel of being "self-contained
+            worlds," or a "scale model household". According to Jesse Fox
+            Mayshark, his films have "a baroque pop bent that is not realist,
+            surrealist or magic realist," but rather might be described as
+            "fabul[ist]". In 2019, the company Murals Wallpaper from the UK
+            launched a line of wallpapers inspired by the visual design of
+            Anderson's films. From The Life Aquatic with Steve Zissou on,
+            Anderson has relied more heavily on stop motion animation and
+            miniatures, even making entire features with stop motion animation
+            with Fantastic Mr. Fox and Isle of Dogs.
+          </p>
+          <h4>Soundtracks</h4>
+          <hr />
+          <p>
+            Anderson frequently uses pop music from the 1960s and '70s on the
+            soundtracks of his films, and one band or musician tends to dominate
+            each soundtrack. Rushmore prominently featured Cat Stevens and
+            British Invasion groups; The Royal Tenenbaums featured Nico; The
+            Life Aquatic with Steve Zissou, David Bowie, including both
+            originals and covers performed by Seu Jorge; The Darjeeling Limited
+            and Rushmore, the Kinks; Fantastic Mr. Fox, the Beach Boys; and
+            Moonrise Kingdom, Hank Williams. (Much of Moonrise Kingdom is filled
+            with the music of Benjamin Britten, which is tied to a number of
+            major plot points for that film.) The Darjeeling Limited also
+            borrowed music styles from Satyajit Ray's films. The Grand Budapest
+            Hotel, which is mostly set in the 1930s, is notable for being the
+            first Anderson film to eschew using any pop music, and instead used
+            original music composed by Alexandre Desplat. Its soundtrack won
+            Desplat the Academy Award for Best Original Score, the BAFTA Award
+            for Best Film Music, and World Soundtrack Award for Best Original
+            Score of the Year. The soundtracks for his films have often brought
+            renewed attention to the artists featured, most prominently in the
+            case of "These Days", which was used in The Royal Tenenbaums.
+          </p>
+        </div>
+        <hr />
+        <a
+          target="_blank"
+          href="https://en.wikipedia.org/wiki/Wes_Anderson"
+          class="btn btn-light"
+          >More About Wes</a
+        >
+
+        <a
+          target="_blank"
+          href="https://www.imdb.com/name/nm0027572/"
+          class="btn btn-light"
+          >Wes Anderson Imdb Page</a
+        >
+      </div>
+    </div>
     <div id="footer"></div>
     <script>
       $(function () {
