--- a/contents.html
+++ b/contents.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Wes Anderson's Contents</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -18,8 +18,187 @@
     />
   </head>
   <body>
-    <div id="header"></div>
-    <p>deneme</p>
+    <div id="header" class="sticky-top"></div>
+    <div class="row justify-content-center">
+      <div
+        class="container p-5 my-5 border"
+        style="width: 720px; height: max-content"
+      >
+        <h1>Wes Anderson's Colour Palettes</h1>
+        <p>
+          “The hazy-hued lens through which we peer into the director’s unique
+          world has a retro quality that cast his films in a nostalgia for a
+          time that could have been”
+        </p>
+        <ul>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.anothermag.com/art-photography/3586/wes-andersons-colour-palettes"
+              class="btn btn-light"
+              >Wes's Color Palette Explanation</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.studiobinder.com/blog/wes-anderson-color-palette/"
+              class="btn btn-light"
+              >How Wes Anderson Subverts Color Theory</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.pastemagazine.com/design/wes-anderson/wes-andersons-colorful-world/"
+              class="btn btn-light"
+              >Wes Anderson's Taste in Color</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h4 class="card-title">The Beauty Of Wes Anderson</h4>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/NloLrrGO__k"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h4 class="card-title">The Wes Anderson Style</h4>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/q45m7RYy7-4"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h4 class="card-title">Wes Anderson : Breaking Formality</h4>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/5G_sn4OINJg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h5 class="card-title">
+            The French Dispatch | How The Stories Connect
+          </h5>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/6IfZp2AoAVc"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h4 class="card-title">How Wes Anderson Masks Emotion</h4>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/Z72lj3NTnd8"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h4 class="card-title">Wes Anderson and His Movies</h4>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/iR7awWR3Nz4"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h4 class="card-title">Why Do Wes Anderson Movies Look Like That?</h4>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/ba3c9KEuQ4A"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+      <div class="card" style="width: 600px">
+        <div class="card-body">
+          <h6 class="card-title">
+            Wes Anderson Explains How to Write & Direct Movies | The Director's
+            Chair
+          </h6>
+          <hr />
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/Sdt0oam6O1o"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <hr />
+        </div>
+      </div>
+    </div>
     <div id="footer"></div>
     <script>
       $(function () {
