--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </style>
   </head>
   <body>
-    <div id="header"></div>
+    <div id="header" class="sticky-top"></div>
+
     <div class="d-flex justify-content-center">
       <div id="demo" class="carousel slide" data-bs-ride="carousel">
         <!-- Indicators/dots -->
@@ -240,6 +241,22 @@
         >
           <span class="carousel-control-next-icon"></span>
         </button>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div
+        class="container p-5 my-5 border"
+        style="width: 720px; height: 480px"
+      >
+        <h1>Wes Anderson's World</h1>
+        <p>
+          Wes Anderson… has a very special kind of talent: He knows how to
+          convey the simple joys and interactions between people so well and
+          with such richness. This kind of sensibility is rare in movies. ~
+          Martin Scorsese
+        </p>
+        <p>This page created by a his fan.</p>
+        <a href="about.html" class="btn btn-light">About Wes</a>
       </div>
     </div>
     <div id="footer"></div>
