--- a/footer.html
+++ b/footer.html
@@ -18,6 +18,15 @@
     />
   </head>
   <body>
+    <footer class="footer bg-light">
+      <div class="row justify-content-center">
+        <div
+          class="container p-1 border"
+          style="width: 720px; height: max-content"
+        >          
+          <p>This web page created by a his fan in 2022.</p>         
+      </div>
+    </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
